<resources>
    <string name="app_name">SavingDataA3</string>
    <string name="details">Student Details</string>
    <string name="action_settings">Settings</string>
    <string name="roll_number">ROLL NUMBER : </string>
    <string name="name">NAME : </string>
    <string name="marks">MARKS : </string>
    <string name="sem">SEMESTER : </string>
    <string name="hint_name">Name</string>
    <string name="hint_roll">Roll No.</string>
    <string name="hint_marks">Marks</string>
    <string name="hint_semester">Semester</string>
    <string name="new_info">enter new information here...</string>
    <string name="read_ext_file">Read from ext file</string>
    <string name="write_ext_file">Write to ext file</string>
    <string name="read_int_file">Read Text from File</string>
    <string name="write_int_file">Write Text to File</string>
    <string name="Notes">Notes</string>

    <string name="add">Add</string>
    <string name="load">Load</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
</resources>
