<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


<TextView
    android:id="@+id/currDate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginBottom="10dp"
    android:textAppearance="?android:attr/textAppearanceLarge"
    />

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minLines="4"
      android:maxLines="20"
      android:hint="@string/new_info"
      android:scrollbars="vertical"
      android:inputType="textMultiLine"
      android:id="@+id/ExtFileInputText"
      android:ems="10"
      android:cursorVisible="true"
      android:layout_marginBottom="30dp"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/ExtReadFromFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_ext_file"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_border"
            android:layout_marginLeft="10dp"/>
        <Button
            android:id="@+id/ExtWriteToFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_border"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="@string/write_ext_file"

            />
        </RelativeLayout>
<Button
    android:id="@+id/MainNotesButton"
    android:text="@string/Notes"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="10dp"
    android:textColor="@android:color/white"
    android:background="@drawable/button_border"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<Button
    android:id="@+id/StudentDetailsbutton"
    android:layout_width="wrap_content"
    android:layout_marginTop="15dp"
    android:textColor="@android:color/white"
    android:background="@drawable/button_border"
    android:layout_marginLeft="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:layout_height="wrap_content"
    android:text="@string/details"/>

<TextView
        android:id="@+id/LastDate"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
    />

</LinearLayout>
